# gpu-optimization

elementwise/: CMakeLists.txt  main.cu
elementwise/include/: common.cuh  kernel.cuh
elementwise/include/kernel/: elementwise_v0.cuh  elementwise_v1.cuh
include/: utils.cuh
reduce/: README.md  reduce_v0.cu  reduce_v1.cu  reduce_v2.cu  reduce_v3.cu  reduce_v4.cu  reduce_v5.cu  reduce_v6.cu  reduce_v7.cu
sgemm/: CMakeLists.txt  README.md  sgemm_v0.cu  sgemm_v1.cu  sgemm_v2.cu  sgemm_v3.cu  sgemm_v4.cu  sgemm_v5.cu  sgemm_v6.cu
sgemm/include/: common.cuh
src/: query.cu
src/elementwise/: CMakeLists.txt  main.cu
src/elementwise/include/: config.cuh  kernel.cuh
src/elementwise/include/kernel/: elementwise_v1.cuh  elementwise_v2.cuh
src/reduce/: CMakeLists.txt  reduce_v0.cu  reduce_v1.cu  reduce_v2.cu  reduce_v5.cu  reduce_v6.cu  reduce_v7.cu
src/sgemm/: CMakeLists.txt  README.md  sgemm_v0.cu  sgemm_v1.cu  sgemm_v2.cu  sgemm_v4.cu  sgemm_v5.cu  sgemm_v6.cu
